; ModuleID = '/home/carl/AnghaBench/twemproxy/src/hashkit/extr_nc_md5.c_hash_md5.c'
source_filename = "/home/carl/AnghaBench/twemproxy/src/hashkit/extr_nc_md5.c_hash_md5.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @hash_md5(i8* %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca [16 x i8], align 16
  store i8* %0, i8** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = load i64, i64* %4, align 8
  %8 = getelementptr inbounds [16 x i8], [16 x i8]* %5, i64 0, i64 0
  %9 = call i32 @md5_signature(i8* %6, i64 %7, i8* %8)
  %10 = getelementptr inbounds [16 x i8], [16 x i8]* %5, i64 0, i64 3
  %11 = load i8, i8* %10, align 1
  %12 = zext i8 %11 to i32
  %13 = and i32 %12, 255
  %14 = shl i32 %13, 24
  %15 = getelementptr inbounds [16 x i8], [16 x i8]* %5, i64 0, i64 2
  %16 = load i8, i8* %15, align 2
  %17 = zext i8 %16 to i32
  %18 = and i32 %17, 255
  %19 = shl i32 %18, 16
  %20 = or i32 %14, %19
  %21 = getelementptr inbounds [16 x i8], [16 x i8]* %5, i64 0, i64 1
  %22 = load i8, i8* %21, align 1
  %23 = zext i8 %22 to i32
  %24 = and i32 %23, 255
  %25 = shl i32 %24, 8
  %26 = or i32 %20, %25
  %27 = getelementptr inbounds [16 x i8], [16 x i8]* %5, i64 0, i64 0
  %28 = load i8, i8* %27, align 16
  %29 = zext i8 %28 to i32
  %30 = and i32 %29, 255
  %31 = or i32 %26, %30
  ret i32 %31
}

declare dso_local i32 @md5_signature(i8*, i64, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
